Update headshot and bios (#4)

--- a/our-team.html
+++ b/our-team.html
@@ -451,7 +451,7 @@
                         <!--<img src="img/team-2022/Maria Vetrici 1.png" class="img-fluid"
                         onmouseover="this.src='img/team-2022/Maria Vetrici 2.png';"
                         onmouseout="this.src='img/team-2022/Maria Vetrici 1.png';">-->
-                        <img src="img/color1.jpg" class="img-fluid">
+                        <img src="img/team-2023/Kristen Parmar.jpg" class="img-fluid">
                         <div class="member-info">
                             <div class="member-info-content">
                                 <h4>Kristen Parmar</h4>
@@ -586,7 +586,7 @@
                         <!--<img src="img/team-2021/Helen Li 1.jpg" class="img-fluid"
                         onmouseover="this.src='img/team-2021/Helen Li 2.jpg';"
                         onmouseout="this.src='img/team-2021/Helen Li 1.jpg';">-->
-                        <img src="img/color1.jpg" class="img-fluid">
+                        <img src="img/team-2023/Gaurika Mahajan.JPG" class="img-fluid">
                         <div class="member-info">
                             <div class="member-info-content">
                                 <h4>Gaurika Mahajan</h4>
@@ -758,7 +758,7 @@
                 <div class="col-lg-3 col-md-5 ">
                     <div class="member" data-toggle="modal" data-target="#dibaa">
                         <!--<img src="img/team-2022/Esther Zhou.jpg" class="img-fluid" alt="">-->
-                        <img src="img/color1.jpg" class="img-fluid">
+                        <img src="img/team-2023/Diba Alam.jpg" class="img-fluid">
                         <div class="member-info">
                             <div class="member-info-content">
                                 <h4>Diba Alam</h4>
@@ -1554,6 +1554,33 @@
         </div>
     </div> 
 
+    <div class="modal fade" id="dibaa" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-avatar modal-lg">
+
+            <div class="modal-content">
+                <div class="modal-header text-center">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true" class="white-text">&times;</span>
+                    </button>
+                </div>
+
+                <div class="modal-body text-center">
+                    <h1>Diba Alam</h1>
+                    <a href="https://www.linkedin.com/in/diba-alam/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <p>Hi! I'm Diba, a second-year Engineering Science student and aspiring aerospace engineer. I'm an avid traveller keen on exploring 
+                        everything the world has to offer, so you'll often catch me in a new country or on a road trip! Apart from being one of WISE's 
+                        Industry Mentorship Directors, I am involved in several other clubs at UofT, including being the Engineering Badminton Intramurals 
+                        Team Captain, because sports are an integral part of my work-life balance. Advocating for equality in STEM is a core value of mine, 
+                        and I'm excited to help foster meaningful connections :) </p>
+                    <div class="text-center">
+                        <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
     <div class="modal fade" id="katiab" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-avatar modal-lg">
 
@@ -1951,6 +1978,39 @@
         </div>
     </div>
 
+    <div class="modal fade" id="gaurikam" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-avatar modal-lg">
+
+            <div class="modal-content">
+                <div class="modal-header text-center">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true" class="white-text">&times;</span>
+                    </button>
+                </div>
+
+                <!-- <div class="modal-header">
+                    <img src="img/speakers/kathryn-cropped.png" alt="avatar" class="rounded-circle img-responsive">
+                </div> -->
+
+                <div class="modal-body text-center">
+                    <h1>Gaurika Mahajan</h1>
+                    <a href="mailto:webmaster@wise.skule.ca"><i class="fa fa-envelope"></i></a>
+                    <a href="https://www.linkedin.com/in/gaurika-mahajan/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <p>Hi! I'm Gaurika, a second-year computer engineering student. I’m super excited to be running this year’s website as the web 
+                        development director! I love programming (clearly), binge-watching grey's anatomy, and reading. I am deeply passionate about
+                         the Women in Science and Engineering Club because I believe in providing equal opportunities for women. As the Web Development 
+                         Director, my goal is to ensure our website is always current, offering a platform where women and non-binary people have access 
+                         to the same opportunities as men in science and engineering. By maintaining an up-to-date website, I aim to empower women by 
+                         connecting them with valuable resources and opportunities, fostering an inclusive environment in these fields.</p>
+                    <div class="text-center">
+                        <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
     <div class="modal fade" id="helenz" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-avatar modal-lg">
 
@@ -1996,7 +2056,7 @@
                 </div> -->
 
                 <div class="modal-body text-center">
-                    <h1>Helen Zhou</h1>
+                    <h1>Charlene Kamba</h1>
                     <a href="mailto:outreach@wise.skule.ca"><i class="fa fa-envelope"></i></a>
                     <a href="http://linkedin.com/in/charlenekamba" target="_blank"><i class="fa fa-linkedin"></i></a>
                     <p>Hi! I’m Charlene, a second-year student pursuing a double major in Statistics and Mathematics. In my free time, I enjoy 
@@ -2125,9 +2185,12 @@
 
                 <div class="modal-body text-center">
                     <h1>Lina Jin</h1>
-                    <a href="mailto:outreach.events@wise.skule.ca"><i class="fa fa-envelope"></i></a>
                     <a href="https://www.linkedin.com/in/lina-jin-99b5121b0" target="_blank"><i class="fa fa-linkedin"></i></a>
-                    <p>Hi, I'm Lina and I'm going to my second year at UofT with a Statistics and Cognitive Science (Computational Stream) double major. I like to crochet, cook/bake, run, and explore/try new things. Meeting new people and listening to their stories are two of things that make me happiest in the world, so I'm so excited to join such an inspiring group to help flourish the passions in STEM for myself and women all around the world!</p>
+                    <p>Hi! My name's Lina and I am a third-year student in Computer Science and Statistics double major! This is my second year 
+                        in WISE and this year I am part of the Conference Team as a Operations Associate Director. In my free time, I like to cook, 
+                        bake, crochet, draw, and read! I constantly try to find unique ways to create in my everyday life. I love the community and 
+                        support that WISE brings to the STEM community and I am so excited to bring the conference to life again this year!
+                    </p>
                     <div class="text-center">
                         <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
                     </div>
