--- a/opportunities.html
+++ b/opportunities.html
@@ -164,7 +164,7 @@
                     <!-- <img src="img/marketing/PwC.png" width="100%" height="650"> -->
                     <p>Sanofi is hosting the second of a three part development workshop series for the Fall 2023 season, <b>NA Sanofi Workshop Series: Top Tips & Tricks to Showcase Your Expertise in a Job Interview!</b> </p>
                     <p><b>About the Workshop</b>: Interviews can sometimes feel so intimidating, but the good news is that they don’t have to be! Join the development workshop session and learn some quick tips and tricks with how to showcase your experiences in a meaningful way. You will also have the opportunity to hear from Sanofi Early Career hires on their interview experiences and also from a recruiter’s perspective on the key things to do and what not to not do.</p>
-                    <b>About Sanofi</b>: We are an innovative global healthcare company, driven by one purpose: we chase the miracles of science to improve people’s lives. Our teams across the world strive to transform the practice of medicine, turning the impossible into the possible for patients. We provide potentially life-changing treatments and the protection of life-saving vaccines to millions of people, and affordable access to our medicines in some of the world’s poorest countries.</p>
+                    <p><b>About Sanofi</b>: We are an innovative global healthcare company, driven by one purpose: we chase the miracles of science to improve people’s lives. Our teams across the world strive to transform the practice of medicine, turning the impossible into the possible for patients. We provide potentially life-changing treatments and the protection of life-saving vaccines to millions of people, and affordable access to our medicines in some of the world’s poorest countries.</p>
                     <p><b>Event:</b> Sanofi NA Workshop: Top Tips & Tricks to Showcase Your Expertise in a Job Interview</p>
                     <p><b>Date:</b> Tuesday, October 10, 2023</p>
                     <p><b>Time:</b> 5:00 - 6:00 PM EST</p>
@@ -174,7 +174,7 @@
 
                 <button type="button" style="margin:10px;" class="collapsible">Google Summer 2024 Internship Opportunities!</button>
                 <div class="content">
-                    <!img src="img/marketing/PwC.png" width="100%" height="650">
+                    <!-- img src="img/marketing/PwC.png" width="100%" height="650"> -->
                     <p>If you are graduating December 2024 or later check out these Summer 
                         2024  internships. Visit <a href="http://google.com/students">google.com/students</a> to apply!</p>
                     <p>Are you looking for more Google content and resources?
@@ -237,9 +237,9 @@
                     <!-- img src="img/marketing/PwC.png" width="100%" height="650"> -->
                     <p>Are you passionate about creating a sustainable future and want to connect with multidisciplinary leaders in the space? <a href="http://globalspark.world/">Global Spark</a> is hosting its Systems for Sustainability Forum (SSF) on November 18th 2023 focused on the topic of <b>“Roadmap to zero hunger: Agricultural innovations for a climate-smart future”</b></p>
                     <p><b>Date: November 18, 2023</b></p>
-                    <p><b>Time: 11:00 am - 3:00 pm EST</b>></p>
+                    <p><b>Time: 11:00 am - 3:00 pm EST</b></p>
                     <p><b>Location: Virtual and in-person at the BCG office in Toronto (81 Bay St, Toronto)</b></p>
-                    <p><b>Event Highlights:</b></p>
+                    <p style="margin-bottom:0;"><b>Event Highlights:</b></p>
                     <ol>
                         <li><b>Thought Leader Panel</b> (11AM - 12:30PM EST) Join global experts to discuss innovative solutions for food security and equitable value chains</li>
                         <li><b>Small Group Discussions with Panelists</b> (12:30PM - 1:00PM EST) Engage in an intimate discussion with one of our panelists</li>
