--- a/opportunities.html
+++ b/opportunities.html
@@ -176,14 +176,14 @@
                 <div class="content">
                     <!-- img src="img/marketing/PwC.png" width="100%" height="650"> -->
                     <p>If you are graduating December 2024 or later check out these Summer 
-                        2024  internships. Visit <a href="http://google.com/students">google.com/students</a> to apply!</p>
+                        2024 internships. Visit <a href="http://google.com/students">google.com/students</a> to apply!</p>
                     <p>Are you looking for more Google content and resources?
                         <a href="https://careersonair.withgoogle.com/">Google Careers OnAir</a> is a virtual event center that provides students and professionals with career focused material from Googlers. 
                         Register for upcoming livestreams, watch previously-aired events on demand, and let us help you get one step closer to your future. Visit 
                         <a href="https://careersonair.withgoogle.com/">Careers OnAir</a>, as well as the <a href="https://buildyourfuture.withgoogle.com/?utm_medium=jobposting&utm_source=email&utm_campaign=byf-postevent&src=Online/TOPs/NA%20Tech%20University%20Email">Build Your Future site</a> 
                         to keep exploring.</p>
                     <p><b>Open roles</b> - Apply early! The following student job opportunities are now open! All available roles can be found on <a href="http://google.com/students">google.com/students</a></p>
-                    <p><b>Internships, Summer 2024</b></p>
+                    <p style="margin-bottom:0;"><b>Internships, Summer 2024</b></p>
                     <ul>
                         <li><b>Now Open! Monday, October 2 - Friday, November 3</b></li>
                             <ul>
@@ -223,7 +223,7 @@
                     <p>Jarvis Consulting Group is hosting a virtual workshop on <b>'What You Need to Know About Starting a Career in Sales'</b> on Tuesday, November 14th, from 12p.m. to 1p.m.!</p>
                     <p>This virtual workshop will be hosted by Jarvis’ very own Lead Account Executive, Tommy Sumi! This opportunity will allow for students to gain valuable insight on careers in sales. Join us to learn essential strategies for successfully entering into a new sales role with confidence, drive, and grit!</p>
                     <p>This is a great opportunity to learn about sales as a career path if you're a student who may not be sure what you want to do after graduation. We'll talk about the traits well suited for jobs in sales, how to impress a sales hiring manager or leader, and how to succeed in a sales role. We hope to see you there!</p>
-                    <p><b>Register for free now and join us for an unforgettable event!</b></p>
+                    <p style="margin-bottom:0;"><b>Register for free now and join us for an unforgettable event!</b></p>
                     <ul>
                         <li>Link to the Google Meeting (copy & paste into browser): <a href="https://meet.google.com/urz-xngt-ikn">https://meet.google.com/urz-xngt-ikn</a></li>
                         <li>Feel free to connect with Tommy Sumi on LinkedIn here!: <a href="https://www.linkedin.com/in/tommy-sumi-892ab3ab/">https://www.linkedin.com/in/tommy-sumi-892ab3ab/</a></li>
