--- a/opportunities.html
+++ b/opportunities.html
@@ -159,18 +159,6 @@
                         </tbody>
                     </table>
                 </div> -->
-                <button type="button" style="margin:10px;" class="collapsible">Sanofi Workshop Series: Top Tips & Tricks to Showcase Your Expertise in a Job Interview!</button>
-                <div class="content">
-                    <!-- <img src="img/marketing/PwC.png" width="100%" height="650"> -->
-                    <p>Sanofi is hosting the second of a three part development workshop series for the Fall 2023 season, <b>NA Sanofi Workshop Series: Top Tips & Tricks to Showcase Your Expertise in a Job Interview!</b> </p>
-                    <p><b>About the Workshop</b>: Interviews can sometimes feel so intimidating, but the good news is that they don’t have to be! Join the development workshop session and learn some quick tips and tricks with how to showcase your experiences in a meaningful way. You will also have the opportunity to hear from Sanofi Early Career hires on their interview experiences and also from a recruiter’s perspective on the key things to do and what not to not do.</p>
-                    <p><b>About Sanofi</b>: We are an innovative global healthcare company, driven by one purpose: we chase the miracles of science to improve people’s lives. Our teams across the world strive to transform the practice of medicine, turning the impossible into the possible for patients. We provide potentially life-changing treatments and the protection of life-saving vaccines to millions of people, and affordable access to our medicines in some of the world’s poorest countries.</p>
-                    <p><b>Event:</b> Sanofi NA Workshop: Top Tips & Tricks to Showcase Your Expertise in a Job Interview</p>
-                    <p><b>Date:</b> Tuesday, October 10, 2023</p>
-                    <p><b>Time:</b> 5:00 - 6:00 PM EST</p>
-                    <p>You may complete the form through this link to access the registration link for the event: <a href="https://smrtr.io/gCcQb">Click Here!</a> </p>
-                    <p>Please make sure to complete your registration <b>on or before October 3, 2023 at 5pm EST. </b></p>
-                </div>
 
                 <button type="button" style="margin:10px;" class="collapsible">Google Summer 2024 Internship Opportunities!</button>
                 <div class="content">
@@ -232,7 +220,7 @@
                     </ul>
                 </div>
 
-                <button type="button" style="margin:10px;" class="collapsible">Roadmap to zero hunger: Agricultural innovations for a climate-smart future</button>
+                <button type="button" style="margin:10px;" class="collapsible">Roadmap to Zero Hunger: Agricultural Innovations for a Climate-Smart Future</button>
                 <div class="content">
                     <!-- img src="img/marketing/PwC.png" width="100%" height="650"> -->
                     <p>Are you passionate about creating a sustainable future and want to connect with multidisciplinary leaders in the space? <a href="http://globalspark.world/">Global Spark</a> is hosting its Systems for Sustainability Forum (SSF) on November 18th 2023 focused on the topic of <b>“Roadmap to zero hunger: Agricultural innovations for a climate-smart future”</b></p>
@@ -247,15 +235,49 @@
                         <li><b>Networking Opportunities:</b> Connect with fellow young professionals, industry experts, and potential collaborators who share your passion for sustainability</li>
                     </ol>
                     <p><b>Register by November 10th for the chance to join in-person or participate in a small group discussion with our speakers!</b>: <a href="https://buff.ly/3tyOHWX">https://buff.ly/3tyOHWX</a></p>
-                    <p>This virtual workshop will be hosted by Jarvis’ very own Lead Account Executive, Tommy Sumi! This opportunity will allow for students to gain valuable insight on careers in sales. Join us to learn essential strategies for successfully entering into a new sales role with confidence, drive, and grit!</p>
-                    <p>This is a great opportunity to learn about sales as a career path if you're a student who may not be sure what you want to do after graduation. We'll talk about the traits well suited for jobs in sales, how to impress a sales hiring manager or leader, and how to succeed in a sales role. We hope to see you there!</p>
-                    <p><b>Register for free now and join us for an unforgettable event!</b></p>
-                    <ul>
-                        <li>Link to the Google Meeting (copy & paste into browser): <a href="https://meet.google.com/urz-xngt-ikn">https://meet.google.com/urz-xngt-ikn</a></li>
-                        <li>Feel free to connect with Tommy Sumi on LinkedIn here!: <a href="https://www.linkedin.com/in/tommy-sumi-892ab3ab/">https://www.linkedin.com/in/tommy-sumi-892ab3ab/</a></li>
-                        <li>Want to learn more about Jarvis? Check out this video here: <a href="https://www.linkedin.com/feed/update/urn:li:activity:7074049903357808640/">https://www.linkedin.com/feed/update/urn:li:activity:7074049903357808640/</a></li>
+                </div>
 
+                <button type="button" style="margin:10px;" class="collapsible">Mastercard Toronto Office Tour Nov 16th</button>
+                <div class="content">
+                    <!-- img src="img/marketing/PwC.png" width="100%" height="650"> -->
+                    <p>Mastercard would like to invite UofT students to attend our Toronto Office Tour Event for prospective interns on November 16th from 5:30-7:30pm.</p>
+                    <p style="margin-bottom:0;">Application Form:</p>
+                    <ul>
+                        <li>Application Form: <a href="https://form.mastercard.com/jfe/form/SV_3vG5K2q8V1zgvgG"></a>https://form.mastercard.com/jfe/form/SV_3vG5K2q8V1zgvgG</li>
                     </ul>
+                </div>
+
+                <button type="button" style="margin:10px;" class="collapsible">Applications Open for Accelerate Her Future's Fellowship Circle!!</button>
+                <div class="content">
+                    <!-- img src="img/marketing/PwC.png" width="100%" height="650"> -->
+                    <p>Applications are now open for Accelerate Her FutureTM’s Fellowship Circle, a 10-week program for Black, Indigenous and women of colour students and recent grads (International students welcome to apply) residing in Canada. This holistic and tailored program provides Group Mentorship Circles, Career Learning Labs, and opportunities for networking and building authentic relationships with peers. Apply today! <b>Applications close November 20.</b></p>
+                    <p>To check eligibility and apply: <a href="https://accelerateherfuture.com/for-individuals/fellowship-circle/">https://accelerateherfuture.com/for-individuals/fellowship-circle/</a></p>
+                    <p style="margin-bottom:0;">Fellowship Circle Application Key Dates:</p>
+                    <ul>
+                        <li>Applications Close: November 20, 2023</li>
+                        <li>Successful Fellows Contacted by: Dec 22, 2023</li>
+                        <li>Fellowship Circle Winter Cohort will include a Career Readiness Bootcamp on January 20/21, 2024 and 10-weekly sessions every Thursday from January 25 - March 28, 2024, 7:00 - 9:00 pm EST.</li>
+                    </ul>
+                </div>
+
+                <button type="button" style="margin:10px;" class="collapsible">Women In Pharma Virtual Career Panel Discussion</button>
+                <div class="content">
+                    <p>Sanofi Canada is hosting their third of a three-part development workshop series for the Fall 2023 season, NA Sanofi Workshop Series: “Women In Pharma” virtual career panel discussion! The workshop will have topics that are particularly relevant to students. Additionally, we would welcome you to attend the session!</p>
+                    <p style="margin-bottom:0;"><b>About the Workshop:</b> The Sanofi “Women In Pharma” virtual career panel discussion on Wednesday, November 15th (5:00pm-6:30pm) is an opportunity for students to gain insight into the pharmaceutical industry and learn from accomplished women who are working in various roles within Sanofi. The amazing panelists will offer valuable perspectives on areas such as:</p>
+                    <ul>
+                        <li>Insight into the company culture.</li>
+                        <li>What it takes to be successful as a woman in the pharma industry.</li>
+                        <li>The challenges and opportunities women may encounter in the industry.</li>
+                        <li>Unique experiences and skills that contribute to a successful career path.</li>
+                        <li>Actionable advice for your own career journey.</li>
+                    </ul>
+                    <p>Be ready to be empowered and inspired!</p>
+                    <p><b>About Sanofi:</b> We are an innovative global healthcare company, driven by one purpose: we chase the miracles of science to improve people’s lives. Our teams across the world strive to transform the practice of medicine, turning the impossible into the possible for patients. We provide potentially life-changing treatments and the protection of life-saving vaccines to millions of people, and affordable access to our medicines in some of the world’s poorest countries.</p>
+                    <p><b>Event:</b> Sanofi NA Workshop: Women In Pharma”</p>
+                    <p><b>Date:</b> Wednesday, November 15th, 2023</p>
+                    <p><b>Time:</b> 5:00 - 6:30 PM EST</p>
+                    <p>You may complete the form through this link to access the registration link for the event: <a href="https://smrtr.io/gZ5wt">https://smrtr.io/gZ5wt</a></p>
+
                 </div>
 
 
