Update headshots and spacing (#5)

--- a/our-team.html
+++ b/our-team.html
@@ -240,7 +240,7 @@
                         onmouseout="this.src='img/team/Tiffanie Li 1.jpeg';">-->
                         <img src="img/color1.jpg" class="img-fluid">
                         <div class="member-info">
-                            <div class="member-info-content">
+                            <div class="member-info-content-long">
                                 <h4>Christina Wong</h4>
                                 <span>Alumni Director</span>
                                 <h5>Translational Research in the Health Sciences</h5>
@@ -844,7 +844,7 @@
                         onmouseout="this.src='img/team-2021/Rubaina Farin 1.jpg';">-->
                         <img src="img/color1.jpg" class="img-fluid">
                         <div class="member-info">
-                            <div class="member-info-content-long">
+                            <div class="member-info-content">
                                 <h4>Talia Yawney</h4>
                                 <span>VP Outreach</span>
                                 <h5>Chemical Engineering</h5>
@@ -865,7 +865,7 @@
                         onmouseout="this.src='img/team-2021/Rubaina Farin 1.jpg';">-->
                         <img src="img/color1.jpg" class="img-fluid">
                         <div class="member-info">
-                            <div class="member-info-content-long">
+                            <div class="member-info-content">
                                 <h4>Aubrey Uy</h4>
                                 <span>VP Outreach</span>
                                 <h5>Bloomberg Nursing</h5>
@@ -1087,8 +1087,6 @@
                                 <div class="social">
                                     <a href="mailto:conference.internal@wise.skule.ca"><i
                                             class="fa fa-envelope"></i></a>
-                                    <a href="mailto:conference.relations@wise.skule.ca"><i
-                                            class="fa fa-envelope"></i></a>
                                     <a href="https://www.linkedin.com/in/chowanne/" target="_blank"><i
                                             class="fa fa-linkedin"></i></a>
 
@@ -1185,7 +1183,7 @@
                         <!--<img src="img/team-2022/Ishika Mittal 1.jpg" class="img-fluid"
                         onmouseover="this.src='img/team-2022/Ishika Mittal 2.jpg';"
                         onmouseout="this.src='img/team-2022/Ishika Mittal 1.jpg';">-->
-                        <img src="img/color1.jpg" class="img-fluid">
+                        <img src="img/team-2023/Tina Do.jpg" class="img-fluid">
                         <div class="member-info">
                             <div class="member-info-content-long">
                                 <h4>Tina Do</h4>
@@ -1221,10 +1219,10 @@
                 </div>
 
                 <div class="col-lg-3 col-md-5 ">
-                    <div class="member" data-toggle="modal" data-target="#cassidyt>
-                        <!--<img src=" img/team-2022/Lauren Altomare 1.png" class="img-fluid"
+                    <div class="member" data-toggle="modal" data-target="#cassidyt" >
+                        <!-- <img src=" img/team-2022/Lauren Altomare 1.png" class="img-fluid"
                         onmouseover="this.src='img/team-2022/Lauren Altomare 2.jpg';"
-                        onmouseout="this.src='img/team-2022/Lauren Altomare 1.png';">-->
+                        onmouseout="this.src='img/team-2022/Lauren Altomare 1.png';"> -->
                         <img src="img/team-2023/Cassidy Tan.jpg" class="img-fluid">
                         <div class="member-info">
                             <div class="member-info-content">
@@ -1958,7 +1956,8 @@
         </div>
     </div>
 
-    <div class="modal fade" id="uzamf" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+
+    <div class="modal fade" id="uzmaf" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-avatar modal-lg">
 
             <div class="modal-content">
@@ -2708,7 +2707,7 @@
         </div>
     </div>
 
-    <!--
+
     <div class="modal fade" id="ayleenf" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-avatar modal-lg">
 
@@ -2721,9 +2720,14 @@
 
                 <div class="modal-body text-center">
                     <h1>Ayleen Farnood</h1>
-                    <a href="mailto:conference.relations@wise.skule.ca"><i class="fa fa-envelope"></i></a>
-                    <a href="https://www.linkedin.com/in/ayleenfarnood/" target="_blank"><i class="fa fa-linkedin"></i></a>
-                    <p>Hey :) My name is Ayleen and I’m a second year EngSci student who’s one of the Conference Panels Directors for WISE this year! I love drawing, listening to music (huge 88rising fan), and all things tech-related. I’ve always been passionate about getting more women involved in STEM so I’m super excited to get to be a part of the WISE team! Especially can’t wait to make this year’s conference a blast :D</p>
+                    <a href="mailto:conference.speakers@wise.skule.ca"><i class="fa fa-envelope"></i></a>
+                    <a href="https://www.linkedin.com/in/ayleenfarnood/" target="_blank"><i
+                            class="fa fa-linkedin"></i></a>
+                    <p>Hey, I'm Ayleen, a third-year Engineering Science student in the Machine Intelligence major. I
+                        love figure skating, drawing, cafe hopping, and WISE! As a Conference Panel Director for WISENC
+                        2024, I'm really excited about the opportunity to interact with amazing speakers and our vibrant
+                        community of attendees. I can't wait to engage in enriching discussions and meet all you lovely
+                        people at the conference :)</p>
                     <div class="text-center">
                         <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
                     </div>
@@ -2731,8 +2735,8 @@
 
             </div>
         </div>
-    </div> 
--->
+    </div>
+
 
     <div class="modal fade" id="solal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-avatar modal-lg">
@@ -2927,6 +2931,39 @@
                         interested in biomedical engineering and STEM. My hobbies include playing music, reading and
                         enjoying time in nature. If you want to chat about anything, please reach out on any of the
                         major platforms!</p>
+                    <div class="text-center">
+                        <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="tinad" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-avatar modal-lg">
+
+            <div class="modal-content">
+                <div class="modal-header text-center">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true" class="white-text">&times;</span>
+                    </button>
+                </div>
+
+                <div class="modal-body text-center">
+                    <h1>Tina Do</h1>
+                    <a href="mailto:conference.internal@wise.skule.ca"><i class="fa fa-envelope"></i></a>
+                    <a href="https://www.linkedin.com/in/annehuynh1/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <p>Hi, I'm Tina! I'm a second-year life science student majoring in Immunology and Health & Disease
+                        and minoring in Physiology. I am one of the Conference Operations Associate Directors for the
+                        WISE Conference team! I love to read comics and novels, rock-climb, and go to concerts. I am
+                        really passionate about my Vietnamese heritage and also improving healthcare. I'm so happy to be
+                        on the WISE team this year because I can connect with so many talented women that are excelling
+                        in their respective careers and working hard to level the playing field for all groups. I hope
+                        that the workforce can equally represent all demographics on every level. This year, the WISE
+                        Conference team is working hard to create an event that includes a variety of disciplines that
+                        people passionate about STEM will enjoy. I hope that everyone will be able to enjoy the event
+                        and meet like-minded people!</p>
                     <div class="text-center">
                         <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
                     </div>
