--- a/opportunities.html
+++ b/opportunities.html
@@ -280,6 +280,20 @@
 
                 </div>
 
+                <button type="button" style="margin:10px;" class="collapsible">Master’s and PhD Opportunities in Intelligent Systems and Control Theory at the University of Toronto Description</button>
+                <div class="content">
+                    <p><b>Master’s and PhD Opportunities in Intelligent Systems and Control Theory at the University of Toronto Description:</b></p>
+                    <p>Intelligent control systems are all around us. From a car’s automatic braking system to the inner workings of the human brain, control systems influence our lives everyday. We are the Systems Controls Group at the University of Toronto, and we specialize in the analysis, design, and control of intelligent systems, working on both theory and applications. We are looking for PhD and Master’s students to join our respective research groups.</p>
+                    <p>Prof. Mireille E. Broucke specializes in systems neuroscience, which is about the use of control theory to understand the human brain.<a href="https://www.control.utoronto.ca/~broucke/">https://www.control.utoronto.ca/~broucke/</a></p>
+                    <p>Prof. Margaret Chapman studies noisy control systems with applications to healthcare and misinformation spreading. <a href="https://www.control.utoronto.ca/~mchapman/index.html">https://www.control.utoronto.ca/~mchapman/index.html</a></p>
+                    <p>Prof. Manfredi Maggiore investigates basic open problems in the area of nonlinear control theory. <a href="https://www.control.utoronto.ca/people/profs/maggiore/">https://www.control.utoronto.ca/people/profs/maggiore/</a></p>
+                    <p>Prof. Lacra Pavel advances control and game theory in networks with applications to optics. <a href="https://www.control.utoronto.ca/~pavel/">https://www.control.utoronto.ca/~pavel/</a></p>
+                    <p>Prof. Luca Scardovi specializes in the analysis and control of interconnected systems with applications to biology <a href="https://www.control.utoronto.ca/~scardovi/">https://www.control.utoronto.ca/~scardovi/</a></p>
+                    <p>Prof. John Simpson-Porco focuses on robust optimal control with applications to energy systems and the power grid. <a href="https://www.control.utoronto.ca/~jwsimpson/">https://www.control.utoronto.ca/~jwsimpson/</a></p>
+                    <p>If you are interested in undertaking a graduate degree in one of our research groups, we kindly ask that you follow the instructions posted <a href="https://www.ece.utoronto.ca/graduates/admission/">here</a> in order to submit your application. In your personal statement, please indicate the names of the professors whom you are most interested in working with. Please also indicate “Systems Control” as a research interest area in your ECE 
+                        application. Applicants to the PhD program are expected to have prior research experience, and a typical PhD applicant will have (or will be working toward) a research-based Master’s degree. Note that the MASc and PhD degree programs are fully funded. We appreciate your consideration, and we hope to see your application.</p>
+                </div>
+
 
                 <!-- <button type="button" class="collapsible">Performance Improvement Consultant (Full Time)</button>
                 <div class="content">
@@ -306,7 +320,7 @@
                     }
                     </script>
                 
-                <p class="align"><i>Last updated: November 2, 2023</i></p>
+                <p class="align"><i>Last updated: November 6, 2023</i></p>
             </div>     
         </section>
 	</main>
